--- a/index.html
+++ b/index.html
@@ -6,416 +6,454 @@
     <title>Générateur de QR Code Premium</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', 'Segoe UI', sans-serif;
-        }
+<style>
+    /* Reset and box-sizing */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', 'Segoe UI', sans-serif;
+}
 
-        body {
-            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
+/* Body background and centering */
+body {
+    background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
 
-        .container {
-            max-width: 1000px;
-            width: 100%;
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 25px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
-            overflow: hidden;
-            animation: fadeIn 0.8s ease-out;
-        }
+/* Main container */
+.container {
+    max-width: 100%;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.95);
+    border-radius: 25px;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    animation: fadeIn 0.8s ease-out;
+}
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+/* FadeIn animation */
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(30px); }
+    to { opacity: 1; transform: translateY(0); }
+}
 
-        header {
-            background: linear-gradient(90deg, #4776E6 0%, #8E54E9 100%);
-            color: white;
-            padding: 30px;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-        }
+/* Header styles */
+header {
+    background: linear-gradient(90deg, #4776E6 0%, #8E54E9 100%);
+    color: white;
+    padding: 30px;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
 
-        header::before {
-            content: "";
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 70%);
-            transform: rotate(25deg);
-        }
+header::before {
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: radial-gradient(circle, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 70%);
+    transform: rotate(25deg);
+}
 
-        header h1 {
-            font-size: 2.8rem;
-            margin-bottom: 15px;
-            position: relative;
-            text-shadow: 0 3px 6px rgba(0,0,0,0.2);
-            letter-spacing: 1px;
-        }
+header h1 {
+    font-size: 2.8rem;
+    margin-bottom: 15px;
+    position: relative;
+    text-shadow: 0 3px 6px rgba(0,0,0,0.2);
+    letter-spacing: 1px;
+}
 
-        header p {
-            font-size: 1.2rem;
-            opacity: 0.9;
-            position: relative;
-            max-width: 700px;
-            margin: 0 auto;
-        }
+header p {
+    font-size: 1.2rem;
+    opacity: 0.9;
+    position: relative;
+    max-width: 700px;
+    margin: 0 auto;
+}
 
-        .content {
-            display: flex;
-            padding: 40px;
-            gap: 40px;
-        }
+/* Content section */
+.content {
+    display: flex;
+    padding: 40px;
+    gap: 40px;
+    flex-wrap: wrap;
+}
 
-        @media (max-width: 900px) {
-            .content {
-                flex-direction: column;
-            }
-        }
+@media (max-width: 900px) {
+    .content {
+        flex-direction: column;
+        gap: 20px;
+    }
+}
 
-        .form-section {
-            flex: 1;
-            padding: 25px;
-            background: #f9f9ff;
-            border-radius: 20px;
-            box-shadow: 0 8px 25px rgba(0,0,0,0.08);
-        }
+/* Form section */
+.form-section {
+    flex: 1;
+    padding: 25px;
+    background: #f9f9ff;
+    border-radius: 20px;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.08);
+}
 
-        .form-group {
-            margin-bottom: 30px;
-        }
+/* Input and buttons */
+input, button {
+    width: 100%;
+    padding: 16px;
+    border-radius: 15px;
+    border: 2px solid #e1e1e1;
+    font-size: 17px;
+    transition: all 0.3s ease;
+}
 
-        label {
-            display: block;
-            margin-bottom: 12px;
-            font-weight: 600;
-            color: #333;
-            font-size: 1.1rem;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
+input:focus {
+    outline: none;
+    border-color: #6a11cb;
+    box-shadow: 0 0 0 4px rgba(106, 17, 203, 0.25);
+}
 
-        input, button {
-            width: 100%;
-            padding: 16px;
-            border-radius: 15px;
-            border: 2px solid #e1e1e1;
-            font-size: 17px;
-            transition: all 0.3s ease;
-        }
+/* File input */
+.file-input {
+    position: relative;
+    display: flex;
+    align-items: center;
+    background-color: #f8f9fa;
+    border-radius: 15px;
+    padding: 18px;
+    border: 2px dashed #d1d1d1;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
 
-        input:focus {
-            outline: none;
-            border-color: #6a11cb;
-            box-shadow: 0 0 0 4px rgba(106, 17, 203, 0.25);
-        }
+.file-input:hover {
+    border-color: #6a11cb;
+    background-color: #eef2ff;
+    transform: translateY(-3px);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+}
 
-        .file-input {
-            position: relative;
-            display: flex;
-            align-items: center;
-            background-color: #f8f9fa;
-            border-radius: 15px;
-            padding: 18px;
-            border: 2px dashed #d1d1d1;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
+.file-input i {
+    font-size: 32px;
+    color: #6a11cb;
+    margin-right: 15px;
+}
 
-        .file-input:hover {
-            border-color: #6a11cb;
-            background-color: #eef2ff;
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-        }
+.file-text {
+    flex: 1;
+}
 
-        .file-input i {
-            font-size: 32px;
-            color: #6a11cb;
-            margin-right: 15px;
-        }
+.file-text small {
+    color: #666;
+    font-size: 0.9rem;
+}
 
-        .file-text {
-            flex: 1;
-        }
+/* Color pickers section */
+.color-pickers {
+    display: flex;
+    gap: 20px;
+    margin-top: 15px;
+    flex-wrap: wrap;
+}
 
-        .file-text small {
-            color: #666;
-            font-size: 0.9rem;
-        }
+.color-picker {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    background: #f8f9fa;
+    padding: 12px;
+    border-radius: 12px;
+    transition: all 0.3s ease;
+}
 
-        .file-input input {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            opacity: 0;
-            cursor: pointer;
-        }
+.color-picker:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+}
 
-        .color-pickers {
-            display: flex;
-            gap: 20px;
-            margin-top: 15px;
-        }
+.color-picker input {
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    border: none;
+    cursor: pointer;
+    background: transparent;
+}
 
-        .color-picker {
-            flex: 1;
-            display: flex;
-            align-items: center;
-            background: #f8f9fa;
-            padding: 12px;
-            border-radius: 12px;
-            transition: all 0.3s ease;
-        }
+.color-picker span {
+    margin-left: 12px;
+    font-weight: 500;
+    color: #555;
+    font-size: 1rem;
+}
 
-        .color-picker:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-        }
+/* Preview section */
+.preview-section {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
-        .color-picker input {
-            width: 50px;
-            height: 50px;
-            padding: 0;
-            border: none;
-            cursor: pointer;
-            background: transparent;
-        }
+/* QR Code Container */
+.qrcode-container {
+    width: 100%;
+    max-width: 320px;
+    height: auto;
+    background: white;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15);
+    overflow: hidden;
+    position: relative;
+    border: 20px solid white;
+}
 
-        .color-picker span {
-            margin-left: 12px;
-            font-weight: 500;
-            color: #555;
-            font-size: 1rem;
-        }
+#qrcode-canvas {
+    width: 100%;
+    max-width: 280px;
+    max-height: 280px;
+    image-rendering: crisp-edges;
+    border-radius: 10px;
+}
 
-        .preview-section {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
+/* Instructions */
+.instructions {
+    text-align: center;
+    color: #555;
+    margin-top: 25px;
+    padding: 25px;
+    background-color: #f8f9fa;
+    border-radius: 18px;
+    font-size: 1rem;
+    width: 100%;
+}
 
-        .qrcode-container {
-            width: 320px;
-            height: 320px;
-            background: white;
-            border-radius: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 30px;
-            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15);
-            overflow: hidden;
-            position: relative;
-            border: 20px solid white;
-        }
+.instructions h3 {
+    margin-bottom: 18px;
+    color: #6a11cb;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
 
-        #qrcode-canvas {
-            width: 280px;
-            height: 280px;
-            image-rendering: crisp-edges;
-            border-radius: 10px;
-        }
+.instructions ul {
+    text-align: left;
+    margin-top: 15px;
+    padding-left: 25px;
+}
 
-        .logo-overlay {
-            position: absolute;
-            width: 80px;
-            height: 80px;
-            background: white;
-            border-radius: 12px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 0 20px rgba(0,0,0,0.15);
-            z-index: 10;
-        }
+.instructions li {
+    margin-bottom: 12px;
+    line-height: 1.6;
+    font-size: 1.05rem;
+}
 
-        .logo-overlay img {
-            max-width: 85%;
-            max-height: 85%;
-            border-radius: 6px;
-        }
+.instructions li i {
+    color: #6a11cb;
+    margin-right: 8px;
+}
 
-        .instructions {
-            text-align: center;
-            color: #555;
-            margin-top: 25px;
-            padding: 25px;
-            background-color: #f8f9fa;
-            border-radius: 18px;
-            font-size: 1rem;
-            width: 100%;
-        }
+/* Footer */
+footer {
+    text-align: center;
+    padding: 25px;
+    background: linear-gradient(90deg, #4776E6 0%, #8E54E9 100%);
+    color: rgba(255,255,255,0.95);
+    font-size: 1.1rem;
+}
 
-        .instructions h3 {
-            margin-bottom: 18px;
-            color: #6a11cb;
-            font-size: 1.5rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
+/* Download button */
+.download-btn {
+    background: linear-gradient(90deg, #2ecc71 0%, #27ae60 100%);
+    color: white;
+    padding: 16px 35px;
+    border: none;
+    border-radius: 12px;
+    font-weight: bold;
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin-top: 20px;
+    display: inline-flex;
+    align-items: center;
+    gap: 12px;
+    transition: all 0.3s ease;
+    box-shadow: 0 5px 15px rgba(46, 204, 113, 0.3);
+}
 
-        .instructions ul {
-            text-align: left;
-            margin-top: 15px;
-            padding-left: 25px;
-        }
+.download-btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 8px 25px rgba(46, 204, 113, 0.5);
+}
 
-        .instructions li {
-            margin-bottom: 12px;
-            line-height: 1.6;
-            font-size: 1.05rem;
-        }
+.download-btn:active {
+    transform: translateY(1px);
+}
 
-        .instructions li i {
-            color: #6a11cb;
-            margin-right: 8px;
-        }
+/* Notification */
+.notification {
+    position: fixed;
+    top: 25px;
+    right: 25px;
+    padding: 18px 30px;
+    background: #2ecc71;
+    color: white;
+    border-radius: 12px;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.25);
+    font-weight: 600;
+    font-size: 1.1rem;
+    transform: translateX(200%);
+    transition: transform 0.4s ease;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
 
-        footer {
-            text-align: center;
-            padding: 25px;
-            background: linear-gradient(90deg, #4776E6 0%, #8E54E9 100%);
-            color: rgba(255,255,255,0.95);
-            font-size: 1.1rem;
-        }
+.notification.show {
+    transform: translateX(0);
+}
 
-        .download-btn {
-            background: linear-gradient(90deg, #2ecc71 0%, #27ae60 100%);
-            color: white;
-            padding: 16px 35px;
-            border: none;
-            border-radius: 12px;
-            font-weight: bold;
-            font-size: 1.2rem;
-            cursor: pointer;
-            margin-top: 20px;
-            display: inline-flex;
-            align-items: center;
-            gap: 12px;
-            transition: all 0.3s ease;
-            box-shadow: 0 5px 15px rgba(46, 204, 113, 0.3);
-        }
+.notification.error {
+    background: #e74c3c;
+}
 
-        .download-btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(46, 204, 113, 0.5);
-        }
+/* Loading spinner */
+.loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255,255,255,0.85);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+    border-radius: 20px;
+    display: none;
+}
 
-        .download-btn:active {
-            transform: translateY(1px);
-        }
+.spinner {
+    width: 60px;
+    height: 60px;
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #8E54E9;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
 
-        .notification {
-            position: fixed;
-            top: 25px;
-            right: 25px;
-            padding: 18px 30px;
-            background: #2ecc71;
-            color: white;
-            border-radius: 12px;
-            box-shadow: 0 8px 25px rgba(0,0,0,0.25);
-            font-weight: 600;
-            font-size: 1.1rem;
-            transform: translateX(200%);
-            transition: transform 0.4s ease;
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-            gap: 12px;
-        }
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 
-        .notification.show {
-            transform: translateX(0);
-        }
+/* Design options */
+.design-options {
+    display: flex;
+    gap: 15px;
+    margin-top: 20px;
+    flex-wrap: wrap;
+}
 
-        .notification.error {
-            background: #e74c3c;
-        }
+.design-option {
+    flex: 1;
+    text-align: center;
+    padding: 12px;
+    border-radius: 12px;
+    background: #f8f9fa;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: 2px solid #e1e1e1;
+}
 
-        .loading {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255,255,255,0.85);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 20;
-            border-radius: 20px;
-            display: none;
-        }
+.design-option:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+}
 
-        .spinner {
-            width: 60px;
-            height: 60px;
-            border: 6px solid #f3f3f3;
-            border-top: 6px solid #8E54E9;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-        }
+.design-option.active {
+    border-color: #6a11cb;
+    background: #eef2ff;
+    box-shadow: 0 0 0 3px rgba(106, 17, 203, 0.2);
+}
 
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
+.design-option i {
+    font-size: 24px;
+    color: #6a11cb;
+    margin-bottom: 8px;
+}
 
-        .design-options {
-            display: flex;
-            gap: 15px;
-            margin-top: 20px;
-        }
+/* Responsive Adjustments */
+@media (max-width: 1200px) {
+    .container {
+        max-width: 90%;
+    }
+    
+    header h1 {
+        font-size: 2.2rem;
+    }
 
-        .design-option {
-            flex: 1;
-            text-align: center;
-            padding: 12px;
-            border-radius: 12px;
-            background: #f8f9fa;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            border: 2px solid #e1e1e1;
-        }
+    .content {
+        gap: 30px;
+    }
+}
 
-        .design-option:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-        }
+@media (max-width: 768px) {
+    .container {
+        max-width: 100%;
+        padding: 15px;
+    }
 
-        .design-option.active {
-            border-color: #6a11cb;
-            background: #eef2ff;
-            box-shadow: 0 0 0 3px rgba(106, 17, 203, 0.2);
-        }
+    header h1 {
+        font-size: 1.8rem;
+    }
 
-        .design-option i {
-            font-size: 24px;
-            color: #6a11cb;
-            margin-bottom: 8px;
-        }
-    </style>
+    .content {
+        padding: 20px;
+        gap: 20px;
+    }
+
+    .form-section {
+        padding: 15px;
+    }
+
+    .qrcode-container {
+        max-width: 250px;
+    }
+}
+
+@media (max-width: 480px) {
+    header h1 {
+        font-size: 1.6rem;
+    }
+
+    header p {
+        font-size: 1rem;
+    }
+
+    .content {
+        gap: 15px;
+    }
+
+    .qrcode-container {
+        max-width: 200px;
+    }
+}
+
+</style>
 </head>
 <body>
     <div class="container">
